[package]
name = "rust-web-serve"
version = "2.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
native-tls = "0.2.12"
serde_json = "1.0"
chrono = "0.4"
http = "1.1.0"
regex = "1"
percent-encoding = "2.1.0"
url = "2"
rand = "0.8"
flate2 = "1.0.30"
mime_guess = "2.0.0-alpha.6"
