[package]
name = "rust-web-serve"
version = "2.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4"
http = "1.1.0"
regex = "1.10.4"
url = "2.5.4"
rand = "0.8"
flate2 = "1.0.30"
mime_guess = "2.0.4"
percent-encoding = "2.3.1"
native-tls = "0.2.12"
